--- a/SGDTool/SGDTool.vcxproj
+++ b/SGDTool/SGDTool.vcxproj
@@ -150,14 +150,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="ADPCM.h" />
-    <ClInclude Include="ATRAC.h" />
-    <ClInclude Include="SGXD.h" />
+    <ClInclude Include="src\ADPCM.h" />
+    <ClInclude Include="src\ATRAC.h" />
+    <ClInclude Include="src\SGXD.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ADPCM.cpp" />
-    <ClCompile Include="ATRAC.cpp" />
-    <ClCompile Include="SGXD.cpp" />
+    <ClCompile Include="src\ADPCM.cpp" />
+    <ClCompile Include="src\ATRAC.cpp" />
+    <ClCompile Include="src\SGXD.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
